# AOC2024

./: .gitignore  README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  pyproject.toml  things_ive_learned.txt
tests/: test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py
tests/utils/: test_file_handling.py  test_input.txt
utils/: file_handling.py
