[project]
name = "AOC2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Fleur", email = "fleurvanl@live.nl"},
]
dependencies = ["pytest>=8.3.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
